--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -155,17 +155,17 @@ ul{
     position: relative;
 }
 
-.text-on-text{
+.text-on-text {
     position: absolute;
-    bottom: 0;
+    bottom: -50%;
     left: 50%;
     text-transform: uppercase;
     background-color: var(--red-bg);
     font-size: 40px;
     padding: 11px 34px 10px;
     border-radius: 50px;
-    transform: rotate(4deg) translateX(-50%);
-    line-height: 46px;
+    transform: rotate(4deg) translate(-50%, -50%);
+    line-height: 51.2px;
     display: flex;
     align-items: flex-start;
     text-align: center;
@@ -184,25 +184,28 @@ ul{
 .main-titles .text-in-bg{
     font-size: 36px;
     font-weight: 700;
+    line-height: 46.08px;
+    text-transform: uppercase;
 }
 
 .main-titles .text-on-text{
     position: absolute;
-    bottom: -12px;
+    bottom: -30%;
     left: 50%;
     text-transform: uppercase;
     background-color: var(--red-bg);
-    font-size: 21px;
-    padding: 10px 15px 12px 15px;
+    font-size: 24px;
+    padding: 11px 15px 10px 15px;
     border-radius: 50px;
-    transform: rotate(4deg) translateX(-50%);
-    line-height: 24px;
+    transform: rotate(
+    4deg) translate(-50%, 0%);
+    line-height: 31px;
     white-space: nowrap;
 }
 
-.about-us .main-titles .text-on-text{
+/* .about-us .main-titles .text-on-text{
     padding: 10px 10px 12px 10px;
-}
+} */
 
 /* HEADER */
 header{
@@ -266,111 +269,53 @@ header{
 
 /* switch-lang */
 
-.switch {
-    position: relative; 
-}
-  
-.switch > span {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    pointer-events: none;
-    font-size: 14px;
-    text-transform: uppercase;
-    width: 50%;
+.switch{
+    display: flex;
+    justify-content: space-between;
     text-align: center;
-    font-weight: 500;
-}
-  
-input.check-toggle-round-flat:checked ~ .uz {
-    color: #101010;
-    transition: 0.2s;
-}
-
-input.check-toggle-round-flat:checked ~ .ru {
-    color: #FFFFFF;
-}
-  
-.switch > span.ru {
-    left: 0;
-    padding-left: 2px;
-    color: #101010;
-}
-  
-.switch > span.uz {
-    right: 0;
-    padding-right: 4px;
-    color: #FFFFFF;
-}
-  
-.check-toggle {
-    position: absolute;
-    visibility: hidden;
-}
-
-.check-toggle + label {
-    display: block;
-    position: relative;
-    cursor: pointer;
-    outline: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-  
-input.check-toggle-round-flat + label {
-    padding: 2px;
-    width: 74px;
-    height: 38px;
-    background-color: #55A66A;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    -ms-border-radius: 100px;
-    -o-border-radius: 100px;
-    border-radius: 100px;
-}
-
-input.check-toggle-round-flat + label:before, input.check-toggle-round-flat + label:after {
-    display: block;
-    position: absolute;
-    content: "";
-}
-  
-input.check-toggle-round-flat + label:before {
-    top: 2px;
-    left: 2px;
-    bottom: 2px;
-    right: 2px;
-    background-color: #55A66A;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    -ms-border-radius: 100px;
-    -o-border-radius: 100px;
-}
-
-input.check-toggle-round-flat + label:after {
-    top: 2px;
-    left: 3px;
-    bottom: 0px;
-    width: 34px;
+    width: 70px;
     height: 34px;
-    background-color: var(--yellow-bg);
-    -webkit-border-radius: 52px;
-    -moz-border-radius: 52px;
-    -ms-border-radius: 52px;
-    -o-border-radius: 52px;
-    border-radius: 52px;
-    -webkit-transition: margin 0.2s;
-    -moz-transition: margin 0.2s;
-    -o-transition: margin 0.2s;
-    transition: margin 0.2s;
-}
-  
-input.check-toggle-round-flat:checked + label:after {
-    margin-left: 34px;
+    line-height: 30px;
+    color: #FFFFFF;
+    background: #55A66A;
+    border-radius: 100px;   
+    padding: 2px; 
+    cursor: pointer;
 }
 
+.switch a{
+    -webkit-user-select: none; 
+    -webkit-touch-callout: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none;
+    border-radius: 50%;  
+    text-decoration: none; 
+    height: 100%;
+    width: 100%;
+    font-weight: 500;
+    font-size: 14px;  
+}
+
+.switch.active .langSwitchUz{
+    background-color: #FFF212;
+    color: #101010; 
+}
+
+.switch.active .langSwitchRu{
+    color: #FFFFFF;
+    background-color: #55A66A;
+}
+
+.switch .langSwitchRu{ 
+    background-color: #FFF212;
+    color: #101010;
+}
+
+.switch .langSwitchUz{
+    color: #FFFFFF;
+    background-color: #55A66A;
+}
 /* HEADER-END */
 
 /* SITE-ON-UPDATE */
@@ -1430,6 +1375,111 @@ input.check-toggle-round-flat:checked + label:after {
 
 /* WHERE-TO-BUY-END */
 
+/* CONTACTS */
+
+.contacts .info-cards{
+    margin-top: 99px;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.contacts .info-cards__item{
+    flex-basis: calc((100% / 3) - 20px);
+    margin-right: 0;
+}
+
+/* CONTACTS-END */
+
+/* VIDEO */
+
+.video{
+    padding-top: 10px;
+}
+
+.video-rows{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.video-item{
+    width: calc((100% / 3) - (60px / 3));
+    margin-right: 30px;
+    margin-bottom: 30px;
+    border-radius: 14px;
+    cursor: pointer;
+}
+
+.video-item:nth-child(3n) {
+    margin-right: 0;
+}
+
+.video-item:hover .video-item-name{
+    background: var(--green-bg);
+}
+
+.video-item:hover .video-item-name h3{
+    color: #FFFFFF;
+}
+
+.video-item-img{
+    height: 200px;
+    border-radius: 14px 14px 0px 0px;
+}
+
+.video-item-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 14px 14px 0px 0px;
+}
+
+.video-item-name{
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 0px 35px;
+    background: #F1EFFA;
+    border-radius: 0px 0px 14px 14px;
+    transition: .2s;
+}
+
+.video-item-name h3{
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 31px;
+    color: #101010;
+}
+
+.video .modal-dialog{
+    max-width: 100%;
+    padding: 0px 260px;
+}
+
+/* VIDEO-END */
+
+/* PROMO */
+
+.promo .video-item{
+    cursor: url('../images/octagon.svg'), auto;
+}
+
+.promo .video-item-img img{
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+.promo .video-item:hover .video-item-name{
+    background-color: #F1EFFA;
+}
+
+.promo .video-item:hover .video-item-name h3{
+    color: #101010;
+}
+
+/* PROMO-END */
+
 /*@media (max-width: 1440px) {*/
 /*    .container{*/
 /*        max-width: 1110px!important;*/
@@ -1437,11 +1487,11 @@ input.check-toggle-round-flat:checked + label:after {
 /*    }*/
 /*}*/
 
-@media (min-width: 1200px){
+/* @media (min-width: 1200px){
     .container{
         max-width: 1110px;
     }
-}
+} */
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 1024px){
@@ -1737,10 +1787,22 @@ input.check-toggle-round-flat:checked + label:after {
         font-size: 64px;
     }
 
-    .text-on-text{
+    .text-on-text {
         font-size: 36px;
-        padding: 11px 28px 10px;
-        line-height: 46px;
+        padding: 11px 32px 10px;
+        line-height: 46.08px;
+    }
+
+    .main-titles .text-on-text {
+        font-size: 20px;
+        padding: 11px 15px 10px;
+        line-height: 25.6px;
+    }
+
+    .main-titles .text-in-bg {
+        font-size: 32px;
+        font-weight: 700;
+        line-height: 40.96px;
     }
 
     .link-btn{
@@ -1863,6 +1925,73 @@ input.check-toggle-round-flat:checked + label:after {
 
     /* product-info-composition end */
 
+    /* CONTACTS */
+
+    .contacts .info-cards{
+        margin-top: 48px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        /* margin-right: 30px; */
+        gap: 30px;
+
+    }
+
+    .contacts .info-cards__item{
+        flex-basis: calc((100% / 2) - 30px);
+        margin-right: 0;
+        height: 324px;
+        /* margin-right: 30px; */
+    }
+
+    .contacts .info-cards__item .info-cards__item-text{
+        font-size: 20px;
+    }
+
+    /* .contacts .info-cards__item:nth-last-child(-n+2){
+       margin-right: 0;
+    }
+
+    .contacts .info-cards__item:first-child{
+        margin-right: 30px;
+    }
+
+    .contacts .info-cards__item:last-child{
+        margin-top: 30px;
+    }
+
+    .contacts .info-cards__item{
+        width: 47.7%;
+    } */
+
+    /* CONTACTS-END */
+
+    /* VIDEO */
+
+    .video-item{
+        width: calc((100% / 2) - (30px / 2));
+    }
+
+    .video-item:nth-child(3n){
+        margin-right: 30px;
+    }
+
+    .video-item:nth-child(2n) {
+        margin-right: 0;
+    }
+
+    .video-item-name h3{
+        font-size: 20px;
+        line-height: 26px;
+    }
+
+    .video .modal-dialog{
+        max-width: 100%;
+        padding: 0px 100px;
+    }
+
+    /* VIDEO-END */
+
 }
 
 
@@ -1873,10 +2002,10 @@ input.check-toggle-round-flat:checked + label:after {
     /*    padding: 0px;*/
     /*}*/
 
-    .text-on-text{
-        font-size: 14px;
-        line-height: 14px;
-        padding: 6px 16px 8px;
+    .text-on-text {
+        font-size: 18px;
+        line-height: 23.04px;
+        padding: 6px 16px 4px;
     }
 
     /* Small-Device-Btn */
@@ -2065,14 +2194,14 @@ input.check-toggle-round-flat:checked + label:after {
         transform: translate(-50%, 0%);
         z-index: 5;
     }
-
+/* 
     .switch{
         position: absolute;
         top: -18px;
         right: 0px;
         z-index: 5;
 
-    }
+    } */
 
     .header-nav.active .mobile-social{
         display: flex;
@@ -2446,14 +2575,15 @@ input.check-toggle-round-flat:checked + label:after {
         width: 100%;
     }
 
-    .main-titles .text-on-text{
-        font-size: 18px;
-        padding: 6px 16px 4px;
-        line-height: 23px;
+    .main-titles .text-on-text {
+        font-size: 16px;
+        padding: 11px 15px 10px;
+        line-height: 20.48px;
     }
 
-    .main-titles .text-in-bg{
+    .main-titles .text-in-bg {
         font-size: 26px;
+        line-height: 33.28px;
     }
 
     .site-on-update_title h1{
@@ -2621,7 +2751,78 @@ input.check-toggle-round-flat:checked + label:after {
 
 
     /* product-info-composition end */
-    
+
+    /* CONTACTS */
+
+    /* CONTACTS */
+
+    .contacts .info-cards{
+        position: static;
+        top: auto;
+        left: auto;
+        transform: none;
+        margin-top: 56px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        /* margin-right: 30px; */
+        gap: 24px;
+
+    }
+
+    .contacts .info-cards__item{
+        margin-top: 0;
+        flex: 1 1 100%;
+        height: 328px;
+        margin-right: 0;
+        /* margin-right: 30px; */
+    }
+
+    .contacts .info-cards__item .info-cards__item-text{
+        padding: 0;
+        display: flex; 
+        flex-direction: column;
+        justify-content: center;
+        font-size: 20px;
+    }
+
+    /* CONTACTS-END */
+
+    /* VIDEO */
+
+    .video-item{
+        width: calc((100% / 1));
+        margin-right: 0;
+    }
+
+    .video-item:last-child{
+        margin-bottom: 0;
+    }
+
+    .video-item:nth-child(3n){
+        margin-right: 0px;
+    }
+
+    .video-item:nth-child(2n) {
+        margin-right: 0px;
+    }
+
+    .video-item-name h3{
+        font-size: 20px;
+        line-height: 26px;
+    }
+
+    .video .modal-dialog{
+        max-width: 100%;
+        padding: 0px 20px;
+    }
+
+    .video .video-close-btn{
+        right: 0;
+        top: -65px;
+    }
+
+    /* VIDEO-END */
     
 }
 
