--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1055,6 +1055,12 @@ header{
 .product-info{
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
+}
+
+.product-info__item{
+    flex: 1 1 calc((100% / 2) - 60px);
+    position: relative;
 }
 
 .product-info__img{
@@ -1067,9 +1073,9 @@ header{
     object-fit: contain;
 }
 
-.product-info .nav{
+/* .product-info .nav{
     margin-left: 30px;
-}
+} */
 
 .product-info .nav-item{
     padding-right: 15px;
@@ -1119,7 +1125,7 @@ header{
 }
 
 .product-info__slogan{
-    margin: 48px 0px 36px 30px;
+    margin: 48px 0px 36px 0px;
     line-height: 20px;
 }
 
@@ -1132,9 +1138,12 @@ header{
 
 .product-info .accordion{
     transition: .2s;
-    margin-left: 30px;
+    /* margin-left: 30px; */
     border: 1px solid #FFFFFF;
     border-radius: 14px;
+    position: absolute;
+    z-index: 5;
+    width: 100%;
 }
 
 .product-info .accordion.active{
@@ -1487,7 +1496,8 @@ header{
     color: #FFFFFF;
     font-weight: 500;
     font-size: 12px;
-    border-radius: 14px 14px 0px 0px;
+    /* border-radius: 14px 14px 0px 0px; */
+    line-height: 15px;
 }
 
 .distribution .table-striped>tbody>tr:nth-of-type(odd){
@@ -1500,23 +1510,100 @@ header{
     color: #101010;
 }
 
+.distribution .table-striped>tbody>tr{
+    line-height: 18px;
+}
+
+.distribution .table-striped>tbody>tr:hover{
+    --bs-table-accent-bg: var(--yellow-bg);
+}
+
+.distribution .table{
+    border: 0;
+    overflow: hidden;
+    border-radius: 14px 14px 0px 0px;
+    margin-bottom: 0;
+    position: relative;
+}
+
+.distribution .table:after{
+    position: absolute;
+    z-index: 5;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    content: "";
+    display: block;
+    width: 100%;
+    height: 24px;
+    background-color: var(--green-bg);
+    border-radius: 0px 0px 14px 14px;
+}
+
+.distribution tbody{
+    font-weight: 500;
+    font-size: 14px;
+    color: #101010;
+}
+
+.distribution tbody, td, tfoot, th, thead, tr{
+    border: 0;
+}
+
+.distribution .table>:not(caption)>*>*{
+    padding: 32px;
+}
+
+.table-container{
+    overflow-x: auto;
+}
+
 /* DISRTIBUTION-END */
 
-/*@media (max-width: 1440px) {*/
-/*    .container{*/
-/*        max-width: 1110px!important;*/
-/*        padding: 0px;*/
-/*    }*/
-/*}*/
+@media (min-width: 1440px) {
+    .table-container{
+        max-width: 1320px;
+        width: 100%;
+        padding-right: var(--bs-gutter-x,.75rem);
+        padding-left: var(--bs-gutter-x,.75rem);
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
 
-/* @media (min-width: 1200px){
-    .container{
-        max-width: 1110px;
+@media (min-width: 1200px){
+    .table-container{
+        max-width: 1140px;
+        width: 100%;
+        padding-right: var(--bs-gutter-x,.75rem);
+        padding-left: var(--bs-gutter-x,.75rem);
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+/* @media (min-width: 992px){
+    .table-container{
+        max-width: none;
+        width: 100%;
+        padding-right: 0;
+        padding-left: var(--bs-gutter-x,.75rem);
+        margin-right: auto;
+        margin-left: auto;
     }
 } */
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 1024px){
+    .table-container{
+        max-width: none;
+        width: 100%;
+        padding-right: 0;
+        padding-left: 45px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
     .header-nav ul li:nth-last-child(2){
         margin-left: 0;
     }
@@ -1887,6 +1974,14 @@ header{
 
     /* Product-Info */
 
+    .product-info__item{
+        flex: 1 1 calc((100% / 1) - 60px);
+    }
+
+    .product-info__item:last-child{
+        margin-bottom: 30px;
+    }
+
     .product-info__img{
         margin-top: 36px;
         height: 576px;
@@ -2014,11 +2109,54 @@ header{
 
     /* VIDEO-END */
 
+    /* DISRTIBUTION */
+
+    .table-container{
+        overflow-x: scroll;
+    }
+    
+    .table-container .table{
+        table-layout: fixed;
+    }
+    
+    .table-container .table th, td{
+        width: 300px;
+    }
+    
+    
+    /* DISRTIBUTION-END */
+
 }
 
 
 /* Mobile */
 @media (max-width: 767px) {
+    
+    /* DISRTIBUTION */
+
+    .table-container{
+        overflow-x: scroll;
+    }
+    
+    .table-container .table{
+        table-layout: fixed;
+    }
+    
+    .table-container .table th, td{
+        width: 300px;
+    }
+    
+    /* DISRTIBUTION-END */
+
+    .table-container{
+        max-width: none;
+        width: 100%;
+        padding-right: 0;
+        padding-left: 16px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
     /*.container{*/
     /*    max-width: 678px!important;*/
     /*    padding: 0px;*/
@@ -2712,6 +2850,14 @@ header{
     /* Products-End */
     
     /* Product-Info */
+
+    .product-info__item{
+        flex: 1 1 calc((100% / 1) - 60px);
+    }
+
+    .product-info__item:last-child{
+        margin-bottom: 30px;
+    }
 
     .product-info__img{
         margin-top: 48px;
