--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,9 +1,26 @@
 body{
     position: relative;
     font-family: "Grandis";
-    cursor: url('../images/octagon.svg'), auto;
+    cursor: url('../images/cursor.svg') 10 -5, auto!important;
     height: 100vh;
     color: #101010;
+}
+
+a,
+button.nav-link,
+.product-info-composition__item,
+.video-item,
+.where-to-buy__map svg,
+.where-to-buy__map path,
+button,
+a svg,
+li,
+.slider-btn-next,
+.slider-btn-prev,
+.product-btn-next,
+.product-btn-prev,
+.products-tabs__link:hover{
+    cursor: url('../images/cursor-hover.svg') 10 -5, auto!important;
 }
 
 ::selection {
@@ -1644,12 +1661,27 @@ header{
     overflow: hidden;
     border-radius: 14px 14px 0px 0px;
     margin-bottom: 0;
+    /* position: relative; */
 }
 
 .table-wrapper{
-    background-color: var(--green-bg);
+    width: 100%;
+    height: 100%;
     padding-bottom: 24px;
-    border-radius: 14px;
+    position: relative;
+    overflow: auto;
+}
+
+.table-wrapper::after{
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--green-bg);
+    height: 24px;
+    border-radius: 0px 0px 14px 14px;
 }
 
 /* .distribution .table-container:after{
@@ -1725,6 +1757,7 @@ header{
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 1024px){
+
     /* where-to-buy-map */
 
     .where-to-buy__map svg{
@@ -2293,7 +2326,10 @@ header{
     .table-container .table th, td{
         width: 300px;
     }
-    
+
+    .table-wrapper{
+        width: fit-content;
+    }
     
     /* DISRTIBUTION-END */
 
@@ -3215,6 +3251,10 @@ header{
     }
 
     /* VIDEO-END */
+
+    .table-wrapper{
+        width: fit-content;
+    }
     
 }
 
